# visualization_software

./: .gitignore  README.md
cmake_example/console_application/: CMakeLists.txt
cmake_example/qt_application/: CMakeLists.txt  README.md
cmake_example/qt_application/src/: main.cpp  window.cpp  window.h
cmake_examples/console_application/: README.md
cmake_examples/console_application/src/: hello_world.cpp
cmake_examples/qt_application/: CMakeLists.txt
cmake_examples/qt_application/src/: window.cpp
data/teddybear/: pvdFile.pvd
data/teddybear/pvdFile/: pvdFile_0.vti
data/vtk/: cube.vtk  points.vtk  source.vtk
latex/dokument/: ako_pisat_v_latexu.tex
latex/prezentacia/: main.tex
vtk_examples/lightning_model_app/: CMakeLists.txt
vtk_examples/lightning_model_app/src/: RenderWindowUISingleInheritance.cxx  RenderWindowUISingleInheritanceDriver.cxx
vtk_examples/simple_display_vtk_app/: CMakeLists.txt
vtk_examples/simple_display_vtk_app/src/: RenderWindowUISingleInheritance.cxx
